Add operator overloading to PyUnicode